add comments and update readme

--- a/index.html
+++ b/index.html
@@ -6,7 +6,12 @@
     <title>Jordan's Bakery</title>
   </head>
   <body>
+    <!-- 
+      React  "injects" the entire website into this single <div>.
+    -->
     <div id="root"></div>
+
+    <!-- This line tells the browser to start running your React code -->
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
